kubernetes/goapp/deploy-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: frontend
        tier: frontend
    spec:
      automountServiceAccountToken: false 
      securityContext:
        runAsUser: 101
        runAsGroup: 101
        fsGroup: 101
      restartPolicy: Always
      containers:
      - name: frontend
        imagePullPolicy: Always
        image: paulovigne/frontend-goapp:v1
        resources:
          requests:
            cpu: 125m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        securityContext:
          runAsNonRoot: true
          allowPrivilegeEscalation: false
          capabilities:
              drop:
                - ALL  
        ports:
        - containerPort: 8080
          name: tcp-frontend
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /
            port: tcp-frontend
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /
            port: tcp-frontend
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 3
        volumeMounts:
        - mountPath: "/usr/share/nginx/html/env.js"
          name: frontend-vars
          subPath: env.js
      volumes:
      - name: frontend-vars
        configMap:
          defaultMode: 493
          name: frontend-vars
